--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
     margin: auto;
     width: 1350px;
 } 
+.img-middle{
+  width: 25px !important ;
+}
+
 .all-together{
   vertical-align: middle;
   border-style: none;
@@ -31,6 +35,7 @@ body {
     margin-top: 2%;
     margin-bottom:2%;
 }
+
 .social-media  {
 height: 40px;
 width: auto !important;
@@ -38,13 +43,12 @@ width: auto !important;
     margin-right: 5%;
     margin-bottom:2%;
     margin-top: 2%;
-
-
 }
+
+
 .social-media {
     width: 100px;
     float: right;
-
 }
 
 .jumbotron { 
@@ -57,6 +61,7 @@ padding-inline-start: 0px;
 text-align: left;
 text-shadow: black;
 }
+
 .button {
     background-color: grey;
     color: white;
@@ -76,6 +81,7 @@ text-shadow: black;
     padding-top: 1.6px;
     position: relative;
 }
+
 .icon-side {
   float: right;
   padding-right: 1.5px;
