--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ body {
     margin: auto;
     width: 1350px;
 } 
-.img-middle{
-  width: 25px !important ;
+.starting{
+  width: 400px !important ;
 }
 
 .all-together{
